2002-06-17  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* [w3m-dev 03214] strtoul() in frame.c
	* frame.c (parseFrameSetLength): strtoul() -> strtol()

2002-06-10  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev-en 00752] Re: tab completion weirdness in w3m 0.3
	* file.c (doFileCopy): same fix as [w3m-dev-en 00751]

2002-06-10  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev-en 00751] Re: tab completion weirdness in w3m 0.3
	* main.c (svBuf): unescape spaces when input is filename
	* proto.h (unescape_spaces): added

2002-06-08  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03207] strchr(), strcasecmp(), and strncasecmp()
	* etc.c (strchr): removed
		(strcasecmp): removed
		(strncasecmp): removed
	* indep.c (strchr): moved, cast
		(strcasecmp): moved, fix the case that s1 = ""
		(strncasecmp): moved, fix the case that s1 is shorter than s2
	* indep.h (strchr): added
		(strcasecmp): added
		(strncasecmp): added

2002-06-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03206] Re: dict
	* main.c (execdict): quote word

2002-06-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03204] INET6
	* main.c (fversion): s/USE_INET6/INET6/

2002-06-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03203] dict
	* main.c (execdict): fix loadGeneralFile()

2002-06-02  Tushar Samant <scribble@pobox.com>

	* [w3m-dev-en 00748] PATCH: Reinitialize w3m while running
	* funcname.tab (INIT_MAILCAP): deleted
		(REINIT): added
	* main.c (config_filename): added
		(reinit): added
	* proto.h (reinit): added
	* rc.c (rc_initialized): deleted
	* w3mhelperpanel.c (editMailcap): use REINIT MAILCAP

2002-06-02  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03200] Re: New configuration option ``keymap_file'' and new command ``DEFINE_KEY''
	* fm.h: add <sts/stat.h>, unistd.h>
	* fm.h (keymap_file): added
	* func.c (keymap_initialized): added
		(current_keymap_file): added
		(setKeymap): added
		(initKeymap): rewrite to use setKeymap()