@@ -1,3 +1,9 @@
+2002-06-18  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* [w3m-dev 03212] lstat() in form.c
+	* form.c: define lstat unless HAVE_LSTAT
+		(form_write_from_file): always check lstat()
+
 2002-06-17  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>
 
 	* [w3m-dev 03214] strtoul() in frame.c
